支持客户端seq透传，支持多个ai角色