@@ -8,6 +8,7 @@
 
 plugins {
     id 'application'
+//    id 'io.freefair.lombok' version '5.3.0'
     id 'org.springframework.boot' version '3.0.6'
     id 'io.spring.dependency-management' version '1.1.0'
     id "io.github.lognet.grpc-spring-boot" version '5.1.1'
@@ -44,8 +45,13 @@ dependencies {
     compileOnly 'org.apache.tomcat:annotations-api:6.0.53' // necessary for Java 9+
     // testRuntimeOnly files('libs/msc32.dll', 'libs/msc64.dll')
 
-
     implementation 'com.theokanning.openai-gpt3-java:service:0.12.0'
+
+//  compileOnly 'org.projectlombok:lombok:1.18.26'
+//	annotationProcessor 'org.projectlombok:lombok:1.18.26'
+//
+//	testCompileOnly 'org.projectlombok:lombok:1.18.26'
+//	testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
@@ -60,7 +66,8 @@ application {
 }
 
 tasks.withType(JavaCompile).forEach {
-    it.options.compilerArgs += "--enable-preview"
+    it.options.compilerArgs += ["--enable-preview", "-parameters"]
+    //这个lombok版本不支持,下个版本再开吧 "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"]
 }
 
 run {
@@ -69,6 +76,12 @@ run {
 
 test {
     jvmArgs += ['--enable-preview', '-Djava.library.path=./src/main/resources/lib/']
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 tasks.named('test') {
